# antibody_antigen_dataset

./: README.md  pyproject.toml
pdb_processor/: __init__.py  __main__.py
pdb_processor/cli/: __init__.py  commands.py  retry.py
pdb_processor/core/: __init__.py  config.py  downloader.py  splitter.py
pdb_processor/sabdab/: __init__.py  parser.py  processor.py
pdb_processor/utils/: __init__.py  pdb_utils.py
